# design-patterns-python

./: .env.example  README.md  app.py  pyproject.toml
scripts/: remove_pycache.sh
src/: sample_code.py
src/creational_patterns/: __init__.py
src/creational_patterns/abstract_factory/: abstract_factory.py
src/creational_patterns/abstract_factory/factory/: __init__.py  abstract_factory.py  (+2 more)
src/creational_patterns/builder/: __init__.py  abstract_builder.py  builder.py  concrete_builder.py  director.py  product.py
src/creational_patterns/factory_method/: factory_method.py
src/creational_patterns/prototype/: component.py  prototype.py  self_reference.py
src/creational_patterns/singleton/: my_class.py  singleton_pattern.py
src/structural_patterns/: __init__.py
src/structural_patterns/adapter/: adaptee.py  adapter.py  adapter_method.py  target.py
src/structural_patterns/bridge/: abstraction.py  bridge.py  concrete_implementor_a.py  concrete_implementor_b.py  implementor.py
src/structural_patterns/composite/: component.py  composite.py  composite_method.py  leaf.py
src/structural_patterns/decorator/: component.py  concrete_component.py  concrete_decorator_a.py  concrete_decorator_b.py  decorator.py  decorator_method.py
src/structural_patterns/facade/: facade.py  facade_method.py  subsystem_1.py  subsystem_2.py
src/structural_patterns/flyweigh/: concrete_flyweight.py  flyweight.py  flyweight_factory.py  flyweight_method.py
src/structural_patterns/proxy/: proxy.py  proxy_method.py  real_subject.py  subject.py
tests/: test_sample_code.py
(+15 files in other folders)
