[tool.poetry]
name = "basic-python-project-template"
version = "0.1.0"
description = "Basic Python Project Template"
authors = ["Ana Bernardi <anacfbernardi@gmail.com>"]
readme = "README.md"
packages = [{ include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.3.2"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
